--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,12 +14,16 @@ background: linear-gradient(to right,  #d2ebf9 13%,#feffff 100%); /* W3C, IE10+,
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d2ebf9', endColorstr='#feffff',GradientType=1 ); /* IE6-9 */
 
 font-family: 'Roboto', sans-serif;
+overflow: hidden;
 
 
 }
 header{
+    
     width: 100%;
+    height:100px;
     color: white;
+
 }
 
 .menu_hamburguesa{
@@ -30,11 +34,13 @@ img{
     margin: 10px;
 }
 
+
+
 nav{ 
-    margin: 20px auto;
-    width: 600px;
+    margin:  auto;
+    padding: 20px;
+    width:800px;
     height: 70px;
-    border-radius: 10px;
     
 }
 
@@ -72,44 +78,84 @@ nav ul li:hover ul{
 
 
 
+/*  main */
+ main{
+    width: 100%;
+    height: 650px;
+    
+   
+ }
 
+ footer{
+    width: 100%;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+ }
 
-
-
-.contenedor_perfil{
-    width: 80%;
+ .contenedor_perfil{
+    width: 85%;
     margin: auto; 
     display: flex;
-    justify-items: center;;
     justify-content: center;;
+    align-items: center;
 }
 
-.contenedor_perfil .texto{
-    padding: 40px 30px;
-    width: 50%;
-    animation-name: texto;
-    animation-iteration-count infinite;
-    animation-timing-function ease;
-    animation-duration 5s;
-    animation-delay 0s;
+ .contenedor_perfil .texto{
+    width: 500px;
 
 }
+
+
+
+
+
+
 
 .foto_perfil{
-    width :50%;
+    width :500px;
     margin-left: 0;
     margin-top: -50px;
     
 }
-.fondo_foto_perfil{
-    margin-top: -300px;
-    margin-left: 550px;
+
+.fondo_color{
     position: absolute;
-    width: 700px;
-    height: 700px;
+    background-color: #FF0099;
     border-radius: 30% 70% 70% 30% / 35% 45% 55% 65%;
     background-image: linear-gradient(45deg,#3023AE 0%,#FF0099 100%);
-    z-index: -2;
+    width: 1000px;
+    height: 1000px;
+    z-index: -1;
+    margin-left: 800px;
+    margin-top: -500px;
+    transform: rotatex(45deg)
+   
+
+}
+.foto_movil{
+    display: none;
+}
+
+
+
+.fondo_foto_perfil{
+
+    margin-top -300px;
+    margin-left 550px;
+    position absolute;
+    width: 600px;
+    height:600px;
+    
+    
+    
+    background-image: url(../assets/img/perfil.png);
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    
 
 }
 
@@ -123,35 +169,47 @@ nav ul li:hover ul{
 }
 
 
-@media (max-width: 600px) {
-    .foto_perfil{
-        display: ;
-        width: 200px;
-        height: 180px;
-        position: absolute;
-        
-    }
-    .contenedor_perfil .texto{
-        margin-top: 200px;
-        width: 95%;
-        animation-name: texto;
-        animation-iteration-count infinite;
-        animation-timing-function ease;
-        animation-duration 5s;
-        animation-delay 0s;
+
+
+/*  about*/
+.contenedor_seccion{
+    margin: auto;
+    width: 1050px;
+    display:flex;
+    justify-content: space-between;
+    text-align: justify;
+    align-items: center;
     
-    }
-    .fondo_foto_perfil{
-        margin-top: -300px;
-        margin-left: 550px;
-        position: absolute;
-        width: 700px;
-        height: 500px;
-        border-radius: 30% 70% 70% 30% / 35% 45% 55% 65%;
-        background-image: linear-gradient(45deg,#3023AE 0%,#FF0099 100%);
-        z-index: -2;
-        box-sizing:border-box ;
-    }    
+}
+.seccion_1{
+    padding: 20px;
+    width: 300px;
+    display: block;
+    
+}
+.seccion_2{
+    display: block;
+    background-image: url(../assets/img/perfil.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 30px;
+    width: 400px;
+    height: 500px;
+
+}
+.seccion_3{
+    display: block;
+    padding: 20px;
+    width: 300px;
+
+}
+
+
+
+
+@media (max-width: 600px) {
+    
 }
 
 
@@ -266,7 +324,7 @@ nav ul li:hover ul{
     width: 300px;
 }
 
-.fotos{
+fotos{
     width: 300px;
     height: 500px;
     border: 1px solid #123456;
