--- a/css/estilos.css
+++ b/css/estilos.css
@@ -142,15 +142,8 @@ nav ul li:hover ul{
 
 
 .fondo_foto_perfil{
-
-    margin-top -300px;
-    margin-left 550px;
-    position absolute;
     width: 600px;
     height:600px;
-    
-    
-    
     background-image: url(../assets/img/perfil.png);
     background-repeat: no-repeat;
     background-position: bottom;
@@ -164,9 +157,7 @@ nav ul li:hover ul{
     padding: 10px 20px;  
 }
 
-.redes img{
-    margin-right 20px;
-}
+
 
 
 
@@ -183,7 +174,7 @@ nav ul li:hover ul{
 }
 .seccion_1{
     padding: 20px;
-    width: 300px;
+    width: 400px;
     display: block;
     
 }
@@ -201,7 +192,7 @@ nav ul li:hover ul{
 .seccion_3{
     display: block;
     padding: 20px;
-    width: 300px;
+    width: 400px;
 
 }
 
@@ -226,7 +217,7 @@ nav ul li:hover ul{
 
 
 
-
+/**Galleria*/
 
 .gallery{
     width: 90%;
@@ -314,26 +305,12 @@ nav ul li:hover ul{
 }
 
 
-.contenedor{
-    display :flex;
-    justify-content: space-between;
-    align-items: center;
-    justify-content: center;
-}
+
 .datos_personales{
     width: 300px;
 }
 
-fotos{
-    width: 300px;
-    height: 500px;
-    border: 1px solid #123456;
-    border-radius: 10px;
-    margin: 0 30px;
-    background-image: url("../assets/img/perfil.png");
-    background-position: center;
-    background-size: cover;
-}
+
 .fotos1{
     width: 100%;
 }
@@ -462,54 +439,9 @@ footer{
 
     
 
-    .foto_perfil{
-        width: 200px;
-    }
-
+  
 
 
     }
 
 
-/*
-aside{
-    background-color: black;
-    padding: 30px;
-    color: white;
-}
-.galeria{
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-
-    justify-content:center;
-    
-    
-}
-
-img{
-    opacity:.4;
-     
-}
-img:hover{
-    opacity:1;
-    border: px solid white;
-     
-}
-
-
-
-
-
-
-
-
-
-
-
-footer{
-    width: 100%;
-    height: 200px;
-    background-color: rgb(25, 25, 25 , 0.8);
-}
